[package]
name = "stink-bid"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.113"
dotenv = "0.15.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
hmac = "0.12.1"
sha2 = "0.10.8"
hex = "0.4.3"
chrono = "0.4.34"
anyhow = "1.0"